first try with collapse submenu [only in the index page at now] - try to have a full screen for apple device to [cause when we change of page we come back to safari web browser not in full screen] - fix calendar error in index page later [it's just a line and i don't know why]

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,15 @@ body
     min-height: 100%;
 }
 
-html,
+html
+{
+
+    font-size: 12px;
+}
+
 body
 {
     border-radius: 2%;
-    font-size: 12px;
 }
 
 .navbar 
